fix: fixed some spacing issues with donate modal (#136)

--- a/src/components/ReportUser/MUI.css
+++ b/src/components/ReportUser/MUI.css
@@ -3,3 +3,8 @@
   font-size: 25px;
   color: white;
 }
+
+.reportOptions {
+  align-self: start;
+  margin: 20px 0 20px 50px;
+}
