--- a/src/components/ReportUser/ReportUser.scss
+++ b/src/components/ReportUser/ReportUser.scss
@@ -51,9 +51,10 @@
   }
 
   &__textArea {
-    width: 70%;
+    width: 75%;
     margin-top: 10px;
-    margin-right: 45px;
+    margin-right: 50px;
+    margin-bottom: 30px;
   }
 
   &__submit {
